test/fixtures/diagnostics/type-checker/negative/extension-property-conflicts/input.tysh
namespace Samples.Extensions.Conflicts

public record Label(Text: string)

public extension Label value {
  public let Text: string = value.Text
}

public extension Label value {
  public let Badge: string = value.Text
}

public extension Label value {
  public let Badge: string = value.Text
}

type HasCount = { Count: int }

public extension HasCount value {
  public let Count: int = value.Count
}
